# rustyneat

./: .tmuxinator.yml  Cargo.toml  README.org
docs/: logo.blend  logo.blend1  neuron.blend  neuron.blend1
src/: lib.rs
src/population/: critter.rs  genome.rs  mod.rs  neuron.rs  pop.rs
zn-encoding/: Cargo.toml  README.org
zn-gui/: Cargo.toml
