[package]
name = "zuseneat"
version = "0.0.0"
authors = ["Fred Mitchell <fred.mitchell@gmx.de>"]
edition = '2018'
license = "MIT"
description = "Rust version of the Neural Evolution of Augmenting Topologies program."
homepage = "ZuseNEAT.de"
documentation = ""
repository = "https://github.com/flajann2/zuse-neat-rust"

[dependencies]
peg = "0"
clap = "2.33.0"
rustyline = "5.0.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }

[workspace]
members = [
    "zn-gui",
]
